2003-01-28  Stefan Hundhammer  <sh@suse.de>

	* User cleanups now have an applicaton-wide keyboard shortcut 
	  (Ctrl-0, Ctrl-1, ...)

	* Prevent some treemap segfaults when re-reading directories
	

2003-01-14  Stefan Hundhammer  <sh@suse.de>

	* Synchronize treemap selection with dir tree after treemap rebuild

2003-01-08  Stefan Hundhammer  <sh@suse.de>

	* Changed activity point handling: The user was prompted far to
	  early to send feedback mail.

	* Changed treemap double click handling:
	  Now double clicking the middle button zooms out,
	  double clicking the right button does nothing
	  (it pops up the context menu before receiving the second click
	  anyway)

	* Changed help file accordingly


2003-01-07  Stefan Hundhammer  <sh@suse.de>

	* Bumped version to 2.3.4

	* Updated admin subdir to latest KDE autoconf / automake stuff

	* Gcc 3.x fixes


2003-01-06  Stefan Hundhammer  <sh@suse.de>

	* Tweaked treemap cushion ridges:
	  Squarified layout row now gets its own ridge,
	  no more double /triple ridges for directories

	* Changed treemap cushion light source direction from bottom right
	  to top left

	* Moved min/max/default for treemap settings to central header file

	* Changed max/default treemap setting values

	* Reduced settings dialogs outer borders:
	  No more accumulated borders


2003-01-04  Stefan Hundhammer  <sh@suse.de>

	* Added "general" settings page; now user configurable:
	  - cross file system boundaries
	  - use local dir read methods
	  - PacMan animation in toolbar
	  - PacMan animation ("PacMan armada") in dir tree

	* Added "treemap" settings page: now user configurable:
	  - plain vs. cushion treemap
	  - squarified vs. simple treemap
	  - ambient light
	  - height scale factor
	  - force grid
	  - draw lines upon low contrast
	  - plain (non-cushioned) treemap colors
	  - highlight rectangle color
	  - minimum tile size
	  - auto-resize treemap

	* Added "open URL" in "file" menu for easier access to remote URLs
